--- a/web/src/app/inventory/inventory-summary/inventory-summary.component.html
+++ b/web/src/app/inventory/inventory-summary/inventory-summary.component.html
@@ -5,7 +5,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-0">
                 <div class="card">
                     <div class="header">
-                        <h2>Inventory Summary <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"
+                        <h2>Brand/NonBrand (Assign) <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"
                             (click)="exportAsXLSX()"></i></h2>
                     </div>
                     <div class="body">
