--- a/web/src/app/inventory/perorder-dummy-list/perorder-dummy-list.component.html
+++ b/web/src/app/inventory/perorder-dummy-list/perorder-dummy-list.component.html
@@ -7,7 +7,7 @@
                         <div class="header p-2 py-0 pt-1">
                             <div class="row" style="border-bottom: 1px solid #00000029;">
                                 <div class="col-md-2 col-8 p-0 ms-3">
-                                    <h2>Dummy Preorder List
+                                    <h2>Search Order PriceList
                                         <button class="bg-btn" (click)="exportAsXLSX()">
                                             <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true"
                                                 type="button"></i>
