--- a/web/src/app/inventory/pre-order/pre-order.component.html
+++ b/web/src/app/inventory/pre-order/pre-order.component.html
@@ -7,7 +7,7 @@
                     <div class="header">
                         <div class="row">
                             <div class="col-lg-2 col-4">
-                                <h2>Pre Order</h2>
+                                <h2>Order Price</h2>
                             </div>
                             <!-- togggle btn start -->
                             <div class="col-xl-1 col-lg-5 col-md-5 col-8 ms-auto p-0">
