--- a/web/src/app/product/add-manage/add-manage.component.html
+++ b/web/src/app/product/add-manage/add-manage.component.html
@@ -79,7 +79,7 @@
                 <!-- chargeCard -->
                 <div class="card">
                     <div class="header">
-                        <h2>Charge Management For Purchase</h2>
+                        <h2>Charge Add For Purchase</h2>
                         <ul class="header-dropdown m-r--5"> </ul>
                     </div>
                     <div class="body">
@@ -202,7 +202,7 @@
                 <!-- serviceCard -->
                 <div class="card">
                     <div class="header">
-                        <h2>Service Management For Billing</h2>
+                        <h2>Service Add For Billing</h2>
                         <ul class="header-dropdown m-r--5"> </ul>
                     </div>
                     <div class="body">
