--- a/web/src/app/sale/bill-list/bill-list.component.html
+++ b/web/src/app/sale/bill-list/bill-list.component.html
@@ -8,7 +8,7 @@
               <!-- Bill all Customer Wise-->
               <div *ngIf="this.id === '0'" class="row">
                 <div class="col-md-1 col-12 p-0 ms-3" style="width: 90px;">
-                  <h2>Bill List </h2>
+                  <h2>BillSerach</h2>
                 </div>
                 <!-- <div class="ps-md-0 ps-1 pt-1" style="width: 40px;">
                                   <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"
