--- a/web/src/app/sale/commission-list/commission-list.component.html
+++ b/web/src/app/sale/commission-list/commission-list.component.html
@@ -40,7 +40,7 @@
                               </div>
                             </div>
                             <div class="col-md-1 col-1" style="width: 40px;padding: 0;">
-                              <button class="bg-none" [routerLink]="['/inventory/purchase',0]">
+                              <button class="bg-none" [routerLink]="['/sale/commission']">
                                 <mat-icon class="col-white plus_icon me-1"> add</mat-icon>
                               </button> 
                             </div>
