--- a/web/src/app/inventory/preorder-list/preorder-list.component.html
+++ b/web/src/app/inventory/preorder-list/preorder-list.component.html
@@ -7,7 +7,7 @@
                         <div class="header p-2 py-0 pt-1">
                             <div class="row">
                                 <div class="col-md-2 col-8 p-0 ms-3">
-                                    <h2>Price List (Preorder)
+                                    <h2>Order PriceList
                                         <button class="bg-btn" (click)="exportAsXLSX()">
                                             <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true"
                                                 type="button"></i>
