--- a/web/src/app/inventory/search-barcode/search-barcode.component.html
+++ b/web/src/app/inventory/search-barcode/search-barcode.component.html
@@ -5,7 +5,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-0">
                 <div class="card">
                     <div class="header">
-                        <h2>Search Barcode </h2>
+                        <h2>Stock Adjustment </h2>
                     </div>
                     <div class="body">
                         <!-- form start -->
