--- a/web/src/app/po/supplier-po-list/supplier-po-list.component.html
+++ b/web/src/app/po/supplier-po-list/supplier-po-list.component.html
@@ -6,7 +6,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-0">
                 <div class="card">
                     <div class="header">
-                        <h2>Supplier Purchase Order List </h2>
+                        <h2>Supplier Order List </h2>
                     </div>
                     <div class="body">
                         <form #f="ngForm" autocomplete="off">
